[gd_scene load_steps=10 format=3 uid="uid://cj2jvej3dn5hd"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_1c74q"]
[ext_resource type="TileSet" uid="uid://cq5gbuw7llxcs" path="res://Levels/Rooms/Floor2.tres" id="2_dgrop"]
[ext_resource type="Shader" path="res://Levels/LevelColor.gdshader" id="2_p4isx"]
[ext_resource type="PackedScene" uid="uid://cgh0bx0ywd8gd" path="res://Player/player.tscn" id="3_isyib"]
[ext_resource type="Texture2D" uid="uid://i0csel8ixuln" path="res://Resources/2d_lights_and_shadows_neutral_point_light.webp" id="5_nir3k"]
[ext_resource type="Script" path="res://Levels/Rooms/RoomCreator.gd" id="6_i3txd"]
[ext_resource type="Script" path="res://Levels/Layouts/LayoutCreator.gd" id="7_vn5su"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rge26"]
shader = ExtResource("2_p4isx")

[sub_resource type="ViewportTexture" id="ViewportTexture_uybvy"]
viewport_path = NodePath("LevelMapContainer/SubViewport")

[node name="Main" type="Node2D"]
process_priority = 1
script = ExtResource("1_1c74q")

[node name="LayoutCreator" type="Node" parent="."]
script = ExtResource("7_vn5su")

[node name="RoomCreator" type="Node" parent="."]
script = ExtResource("6_i3txd")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.262745, 0.262745, 0.262745, 1)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
rotation = -0.827286
color = Color(1, 1, 0.941176, 1)
energy = 0.1
range_item_cull_mask = 0
shadow_color = Color(0.290196, 0.290196, 0.290196, 0)
shadow_item_cull_mask = 2

[node name="Player" parent="." instance=ExtResource("3_isyib")]
position = Vector2(400, 516)
disable_mode = 2

[node name="PointLight2D" type="PointLight2D" parent="Player"]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)
energy = 0.1
shadow_color = Color(0, 0, 0, 0.729412)
shadow_item_cull_mask = 2
texture = ExtResource("5_nir3k")
height = 4000.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 516)
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="LevelMapContainer" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="LevelMapContainer"]
material = SubResource("ShaderMaterial_rge26")
texture = SubResource("ViewportTexture_uybvy")
centered = false

[node name="SubViewport" type="SubViewport" parent="LevelMapContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="LevelMap" type="TileMap" parent="LevelMapContainer/SubViewport"]
tile_set = ExtResource("2_dgrop")
cell_quadrant_size = 32
format = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[connection signal="setup_complete" from="LayoutCreator" to="." method="_on_layout_creator_setup_complete"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
